--- a/nginx/assets/nginx.conf
+++ b/nginx/assets/nginx.conf
@@ -14,16 +14,12 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
+    perl_modules perl/lib;
+    perl_require upstream.pm;
+
     perl_set $nginx_proxy_pass_upstream '
         sub {
-            my $content;
-            my $filename = "/etc/nginx/upstream/upstream.txt";
-            open(my $fh, "<", $filename) or die "cannot open file $filename";
-            {
-                chomp($content = <$fh>);
-            }
-            close($fh);
-            return $content;
+            upstream::endpoint( "/etc/nginx/upstream/upstream.txt" );
         }
     ';
 
