remove http:// hard coded scheme in default.co

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 AUTH_USERNAME=admin
 AUTH_PASSWORD=MzlmaE1KS2RKKzByV0l2TDVNeS9ML2NU
-BLUE_ENDPOINT=apache:80
-GREEN_ENDPOINT=apache:81
+BLUE_ENDPOINT=http://apache:80
+GREEN_ENDPOINT=http://apache:81
 ACTIVE_ENDPOINT=blue
 UPSTREAM_FILE=/etc/nginx/upstream/upstream.txt
