--- a/docker-compose-build.yml
+++ b/docker-compose-build.yml
@@ -9,8 +9,8 @@ services:
     environment:
       - AUTH_USERNAME=${AUTH_USERNAME:-admin}
       - AUTH_PASSWORD=${AUTH_PASSWORD:-MzlmaE1KS2RKKzByV0l2TDVNeS9ML2NU}
-      - BLUE_ENDPOINT=${BLUE_ENDPOINT:-apache:80}
-      - GREEN_ENDPOINT=${GREEN_ENDPOINT:-apache:81}
+      - BLUE_ENDPOINT=${BLUE_ENDPOINT:-http://apache:80}
+      - GREEN_ENDPOINT=${GREEN_ENDPOINT:-http://apache:81}
       - ACTIVE_ENDPOINT=${ACTIVE_ENDPOINT:-blue}
       - UPSTREAM_FILE=${UPSTREAM_FILE:-/etc/nginx/upstream/upstream.txt}
     restart: always
