Restored resolver 127.0.0.11 ipv6=off into default.conf and removed in Dockerfile

--- a/nginx/assets/conf.d/default.conf
+++ b/nginx/assets/conf.d/default.conf
@@ -22,6 +22,7 @@ server {
     #}
 
     location ~ / {
+      resolver 127.0.0.11 ipv6=off;
       set $upstream ${nginx_proxy_pass_upstream};
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
